<resources>
    <string name="abc_action_bar_home_description">Naviguer vers l\'accueil</string>
    <string name="abc_action_bar_up_description">Naviguer vers l\'écran précédent</string>
    <string name="abc_action_menu_overflow_description">Plus d\'options</string>
    <string name="abc_action_mode_done">Terminé</string>
    <string name="abc_activity_chooser_view_see_all">Tout voir</string>
    <string name="abc_activitychooserview_choose_application">Choisir une application</string>
    <string name="abc_capital_off">ARRÊT</string>
    <string name="abc_capital_on">MARCHE</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">supprimer</string>
    <string name="abc_menu_enter_shortcut_label">entrer</string>
    <string name="abc_menu_function_shortcut_label">Fonction+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Maj+</string>
    <string name="abc_menu_space_shortcut_label">espace</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Recherche…</string>
    <string name="abc_searchview_description_clear">Effacer la requête</string>
    <string name="abc_searchview_description_query">Requête de recherche</string>
    <string name="abc_searchview_description_search">Rechercher</string>
    <string name="abc_searchview_description_submit">Soumettre la requête</string>
    <string name="abc_searchview_description_voice">Recherche vocale</string>
    <string name="abc_shareactionprovider_share_with">Partager avec</string>
    <string name="abc_shareactionprovider_share_with_application">Partager avec %s</string>
    <string name="abc_toolbar_collapse_description">Réduire</string>
    <string name="action_refresh_equalizer">Rafraîchir les valeurs</string>
    <string name="activity_battery_name">Batterie</string>
    <string name="activity_custom_equalizer_name">Personnaliser la banque 1</string>
    <string name="activity_equalizer_name">Égaliseur</string>
    <string name="activity_find_me_name">Profil Find Me</string>
    <string name="activity_heart_rate_name">Profil Heart Rate</string>
    <string name="activity_information_name">Informations sur l\'appareil</string>
    <string name="activity_proximity_name">Profil Proximity</string>
    <string name="activity_remote_name">Télécommande</string>
    <string name="activity_tws_name">TWS</string>
    <string name="activity_upgrade_name">Mise à jour</string>
    <string name="alert_app_header">Applications</string>
    <string name="alert_empty_people">ORII peut vous prévenir lorsqu\'un contact spécifique vous envoie un message ou vous appelle.

 Cliquez sur le bouton + en haut à droite pour ajouter une personne importante.</string>
    <string name="alert_file_error_message">Erreur lors de la récupération du fichier sélectionné. Veuillez réessayer ou en sélectionner un autre.</string>
    <string name="alert_file_error_title">Erreur de fichier</string>
    <string name="alert_info_deleting_header">Suppression</string>
    <string name="alert_info_deleting_text">Faites glisser vers la gauche sur la ligne pour supprimer</string>
    <string name="alert_info_header">Notifications</string>
    <string name="alert_info_led_color">Affiche la couleur de la lumière de la bague</string>
    <string name="alert_info_sub_header">ORII peut vous envoyer des notifications personnalisées</string>
    <string name="alert_info_vibration">Affiche le nombre de vibrations (sur 4)</string>
    <string name="alert_level_high">FORT</string>
    <string name="alert_level_mild">FAIBLE</string>
    <string name="alert_level_none">AUCUN</string>
    <string name="alert_message_connecting">Connexion de l\'appareil…</string>
    <string name="alert_message_connection_state_unknown">État de connexion inconnu</string>
    <string name="alert_message_disconnected">Appareil déconnecté</string>
    <string name="alert_message_disconnecting">Déconnexion de l\'appareil…</string>
    <string name="alert_no_file_selected_message">Aucun fichier sélectionné ou le fichier sélectionné est introuvable. Veuillez en choisir un autre.</string>
    <string name="alert_no_file_selected_title">Aucun fichier disponible</string>
    <string name="alert_not_a_bin_file_message">Le fichier sélectionné n\'est pas un fichier bin. Cette application ne prend en charge que les fichiers bin pour la mise à jour. Veuillez en choisir un autre.</string>
    <string name="alert_not_a_bin_file_title">Pas un fichier bin</string>
    <string name="alert_people_header">Contacts</string>
    <string name="alert_permissions_message">Veuillez activer l\'autorisation de localisation, requise pour rechercher des appareils LE.</string>
    <string name="alert_permissions_title">Autorisations requises</string>
    <string name="alert_reconnection_message">En attente de reconnexion</string>
    <string name="alert_reconnection_title">Appareil déconnecté</string>
    <string name="alert_upgrade_commit_message">Les données ont été téléchargées sur la carte et celle-ci est prête pour la phase de validation. Voulez-vous valider votre téléchargement ?</string>
    <string name="alert_upgrade_commit_title">Validation des données</string>
    <string name="alert_upgrade_complete_message">La mise à jour s\'est terminée avec succès.</string>
    <string name="alert_upgrade_complete_title">Mise à jour terminée</string>
    <string name="alert_upgrade_low_battery_message">La batterie de votre appareil audio est faible. Veuillez le connecter à un chargeur.</string>
    <string name="alert_upgrade_low_battery_title">Batterie faible</string>
    <string name="alert_upgrade_sync_id_different_message">Une mise à jour précédente inachevée a été traitée avec un fichier différent. En poursuivant la mise à jour actuelle, l\'appareil perdra toutes les informations de la précédente mise à jour. Voulez-vous continuer ?</string>
    <string name="alert_upgrade_sync_id_different_title">Transfert de fichier terminé</string>
    <string name="alert_upgrade_transfer_complete_message">Voulez-vous continuer ?</string>
    <string name="alert_upgrade_transfer_complete_title">Transfert de fichier terminé</string>
    <string name="apf1_name">APF1</string>
    <string name="apf2_name">APF2</string>
    <string name="app_name">ORII</string>
    <string name="app_version_info_bug_fixes">Corrections de bugs</string>
    <string name="app_version_info_cancel">Annuler</string>
    <string name="app_version_info_new_features">Nouvelles fonctionnalités</string>
    <string name="app_version_info_title">MISE À JOUR DE L\'APPLICATION ORII</string>
    <string name="app_version_info_update">Mettre à jour</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_dont_have_ac">Vous n\'avez pas de compte ?</string>
    <string name="auth_email">email</string>
    <string name="auth_email_login">Se connecter avec l’email</string>
    <string name="auth_error_email_is_empty">Email vide</string>
    <string name="auth_error_invalid_email_format">Format d\'email invalide</string>
    <string name="auth_error_invalid_password_format">Format de mot de passe invalide</string>
    <string name="auth_facebook_login">Continuer avec Facebook</string>
    <string name="auth_forgot_password">Mot de passe oublié ?</string>
    <string name="auth_forgot_password_error_24hrs_3times">Vous ne pouvez pas réinitialiser le mot de passe plus de 3 fois en 24 heures.</string>
    <string name="auth_forgot_password_error_email_empty">L\'email ne peut pas être vide.</string>
    <string name="auth_forgot_password_error_email_not_found">Email introuvable.</string>
    <string name="auth_forgot_password_send">Envoyer</string>
    <string name="auth_forgot_password_success">Demande de réinitialisation envoyée.</string>
    <string name="auth_forgot_password_title">MOT DE PASSE OUBLIÉ</string>
    <string name="auth_google_login">Continuer avec Google</string>
    <string name="auth_intro">Bienvenue dans le monde de l\'interaction vocale.</string>
    <string name="auth_login">Connexion</string>
    <string name="auth_login_error_already_verified">Votre email est déjà vérifié</string>
    <string name="auth_login_error_email_not_verify">Email non vérifié</string>
    <string name="auth_login_error_invalid_email_or_password">Email ou mot de passe invalide</string>
    <string name="auth_login_error_invalid_verify_data">Vérification invalide.</string>
    <string name="auth_login_fail_facebook">Échec de connexion Facebook, veuillez réessayer plus tard</string>
    <string name="auth_login_fail_google">Échec de connexion Google, veuillez réessayer plus tard</string>
    <string name="auth_login_title">CONNEXION PAR EMAIL</string>
    <string name="auth_mail_sent_text">Veuillez vérifier votre email pour un lien de confirmation.</string>
    <string name="auth_mail_sent_title">E-MAIL ENVOYÉ !</string>
    <string name="auth_need_more_help"> Besoin d\'aide ? </string>
    <string name="auth_password">mot de passe</string>
    <string name="auth_register_confirm_password">confirmer le mot de passe</string>
    <string name="auth_register_error_confirm_password_not_match">Le mot de passe confirmé ne correspond pas</string>
    <string name="auth_register_error_email_exist">Email déjà existant</string>
    <string name="auth_register_error_email_not_real">Adresse email non valide</string>
    <string name="auth_register_error_invalid_email_format">Format d\'email invalide</string>
    <string name="auth_register_error_invalid_password_length">Longueur de mot de passe invalide</string>
    <string name="auth_register_title">INSCRIPTION PAR EMAIL</string>
    <string name="auth_sign_up">S\'inscrire</string>
    <string name="band1_name">bande 1</string>
    <string name="band2_name">bande 2</string>
    <string name="band3_name">bande 3</string>
    <string name="band4_name">bande 4</string>
    <string name="band5_name">bande 5</string>
    <string name="bands_title">Bandes</string>
    <string name="bt_n_location_dialog_bt">Bluetooth</string>
    <string name="bt_n_location_dialog_location">Localisation / GPS</string>
    <string name="bt_n_location_dialog_title">Veuillez activer les fonctionnalités Bluetooth et Localisation/GPS :</string>
    <string name="tutorial_complete_1">Tutoriel d\'initiation terminé</string>
    <string name="tutorial_complete_2">Vous pouvez toujours rouvrir ce tutoriel dans la section "Aide"</string>
    <string name="tutorial_complete_3">Vous pouvez également en apprendre plus en sélectionnant "Tutoriel supplémentaire" dans la section "Aide".</string>
    <string name="tutorial_complete_4">Retour à l\'application…</string>
    <string name="tutorial_im_ready">Je suis prêt</string>
    <string name="tutorial_pair_to_orii_later">Appairer ORII plus tard</string>
    <string name="tutorial_welcome_message">Félicitations pour l\'acquisition d\'une bague ORII.

Nous allons maintenant l\'appairer, trouver la bonne taille de bague, apprendre comment écouter avec ORII, appeler l\'assistant vocal et lire les messages avec ORII.

Prêt à utiliser ORII ?</string>
    <string name="tutorial_welcome_text">Bienvenue,
 %1$s </string>
    <string name="update_reminder_1">1. NE PAS charger/éteindre ORII avant la fin de la mise à jour.</string>
    <string name="update_reminder_2">2. La mise à jour peut prendre environ 10–15 minutes.</string>
    <string name="update_reminder_3">3. Gardez ORII près de ce téléphone jusqu\'à la fin de la mise à jour.</string>
    <string name="update_reminder_update_orii">METTRE ORII À JOUR →</string>
    <string name="update_title_update_details">DÉTAILS DE LA MISE À JOUR</string>
</resources>