<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Titre principal -->
    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/din_bold"
        android:text="@string/tutorial_welcome_text"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531" />

    <!-- Message explicatif -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="80dp"
        android:gravity="start"
        android:text="@string/tutorial_welcome_message"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bouton “Pair to ORII later” -->
    <Button
        android:id="@+id/pair_to_orii_later_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/black_white_rectangular_button"
        android:text="@string/tutorial_pair_to_orii_later"
        android:textAllCaps="false"
        android:textColor="@color/button_text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/im_ready_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bouton “I’m ready” -->
    <Button
        android:id="@+id/im_ready_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/black_white_rectangular_button"
        android:text="@string/tutorial_im_ready"
        android:textAllCaps="false"
        android:textColor="@color/button_text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
