<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/auth_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Sous-titre / Introduction -->
    <TextView
        android:id="@+id/auth_intro_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/din_regular"
        android:text="@string/auth_intro"
        android:textAllCaps="true"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/logo_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bouton Facebook Login -->
    <Button
        android:id="@+id/fb_login_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/black_rounded_outlined_button_background"
        android:fontFamily="@font/din_regular"
        android:text="@string/auth_facebook_login"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/auth_intro_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bouton Google Login -->
    <Button
        android:id="@+id/google_login_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/black_rounded_outlined_button_background"
        android:fontFamily="@font/din_regular"
        android:text="@string/auth_google_login"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/fb_login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Ligne de séparation -->
    <View
        android:id="@+id/separator_line"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@+id/google_login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bouton Email Login -->
    <Button
        android:id="@+id/email_login_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_rounded_outlined_button"
        android:fontFamily="@font/din_regular"
        android:text="@string/auth_email_login"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/separator_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Texte “Don’t have an account?” -->
    <TextView
        android:id="@+id/dont_have_ac_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/din_regular"
        android:text="@string/auth_dont_have_ac"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Lien “Sign up” -->
    <TextView
        android:id="@+id/sign_up_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/din_regular"
        android:text="@string/auth_sign_up"
        android:textColor="@color/colorDarkRed"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="@+id/dont_have_ac_text_view"
        app:layout_constraintBottom_toBottomOf="@+id/dont_have_ac_text_view"
        app:layout_constraintStart_toEndOf="@+id/dont_have_ac_text_view" />

    <!-- ProgressBar (centré grâce à 4 contraintes) -->
    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
